# applied_math

./: .gitmodules  README.md
c++/: CMakeLists.txt
c++/competitive_prog/: README.txt
c++/competitive_prog/chap-1/: exe  missing_numbers.cpp  weird_algorithm.cpp
c++/competitive_prog/chap-2/: CMakeLists.txt  exe  main.cpp  test.cpp  test2.cpp
c++/containers_iterators/: main.cpp
c++/include/: todo.hpp
c++/src/: main.cpp  todo.cpp
c++/templates/: A.h  CMakeLists.txt  auto_type.cpp  myexe  templ_ex0.cpp  templ_ex1.cpp  templ_ex3.cpp  templates_arg_deduction_1.cpp  templates_arg_deduction_2.cpp
c++/templates/contraints_example/: main.cpp  my_template_header.hpp
c++/templates/templates_exercise/: A.cpp  CMakeLists.txt  main.cpp  myprog1  templ_ex2.cpp
c++/templates/templates_exercise/auto_template/: main.cpp
c++/templates/templates_exercise/variadic_templates/: exe  fold_expr.cpp  main.cpp
c++/templates/templates_exercise/variadic_templates/dependent_names/: dependent_names.cpp  main.cpp  mem_alloc.cpp  special_exe  specialization_example.cpp  type_trait.cpp
c++/templates/traits_example/: main.cpp  typetraits1.cpp
matlab/: frob.m
python/: legendre.py
